[package]
name = "leetcode_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
leetcoderustapi = "1.0.8"
clap = { version = "4.5.34", features = ["derive"] }
toml = "0.8.20"
toml_edit = "0.22.24"
serde = { version = "1.0.219", features = ["serde_derive"] }
reqwest = "0.12.15"
tokio = { version = "1.44.1", features = ["full"] }
dirs = "6.0.0"
warp = "0.3.7"
colored = "3.0.0"
nanohtml2text = "0.2.1"
html2md = "0.2.15"

