[package]
name = "leetcode-cli"
version = "0.1.0"
authors = ["Coding Kelps"]
categories = ["command-line-utilities"]
description = "Interact with LeetCode in your development environment."
edition = "2021"
exclude = []
homepage = "https://github.com/coding-kelps/leetcode-cli"
keywords = ["leetcode"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/coding-kelps/leetcode-cli"
rust-version = "1.83"

[[bin]]
name = "leetcode-cli"
path = "src/main.rs"

[lib]
name = "leetcode_cli"
path = "src/lib.rs"

[dependencies]
leetcoderustapi = "1.0.8"
clap = { version = "4.5.34", features = ["derive"] }
toml = "0.8.20"
toml_edit = "0.22.24"
serde = { version = "1.0.219", features = ["serde_derive"] }
reqwest = "0.12.18"
tokio = { version = "1.44.1", features = ["full"] }
dirs = "6.0.0"
warp = "0.3.7"
colored = "3.0.0"
nanohtml2text = "0.2.1"
html2md = "0.2.15"
tempfile = "3.20.0"
regex = "1.11.1"
thiserror = "2.0.12"
spinners = "4.1.1"
